# kuri_msgs

./: CMakeLists.txt  README.md  package.xml
action/: AllocateTasks.action  ConvertPose.action  DropObject.action  Explore.action  FollowPath.action  GenerateExplorationWaypoints.action  GeneratePaths.action  Mapping.action  PickObject.action  Tracking.action
msg/: NavTask.msg  NavTasks.msg  Object.msg  ObjectsMap.msg  Task.msg  Tasks.msg
